# csresearch-env

./: .gitignore  Makefile  README.md  deploy.md
admin/: Dockerfile  Makefile  admin.py  docker-compose.yaml
csr_admin/: Makefile  main.py  pyproject.toml
csr_admin/src/csr_admin/: __init__.py  list.py
csr_admin/src/csr_admin/templates/: Makefile  docker-compose.jinja2  users
deploy/kenpu/c4050/: Makefile  docker-compose.yaml
docker/: Dockerfile  bash.bashrc  createuser.sh  createusers  start.sh  users.default
postgres_docker/: .Dockerfile.swp  Dockerfile
