[project]
name = "csr-admin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "jinja2>=3.1.6",
    "tabulate>=0.9.0",
    "typer>=0.19.2",
]

[project.scripts]
csr = "csr_admin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

